tests/ui/closures/box-generic-closure.stderr
error[E0308]: mismatched types
  --> $DIR/box-generic-closure.rs:6:30
   |
LL | fn foo<F: FnMut()>() {
   |        - expected this type parameter
LL |     let _: Box<F> = Box::new(|| ());
   |                     -------- ^^^^^ expected type parameter `F`, found closure
   |                     |
   |                     arguments to this function are incorrect
   |
   = note: expected type parameter `F`
                     found closure `{closure@$DIR/box-generic-closure.rs:6:30: 6:32}`
   = help: every closure has a distinct type and so could not always match the caller-chosen type of parameter `F`
note: associated function defined here
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
